# SU-Chatbot-project-

./: .gitignore  README.md  docker-compose.yml  firebase.json
backend/: .env.example  .gcloudignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  cloud_sql.py
backend/app/integrations/: ams.py  identity.py
backend/app/models/: schemas.py
backend/app/rag/: ingest.py  retriever.py
backend/app/services/: ai.py  chat.py  repository.py
backend/migrations/: 001_initial.sql
dataconnect/: dataconnect.yaml
dataconnect/admin/: mutations.gql  queries.gql
dataconnect/schema/: schema.gql
deploy/: cloud-run-env.yaml  deploy-cloud-run.ps1
docs/: DATABASE_ADMIN.md  FIREBASE_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  REMAINING_INPUTS.md
flutter_su_chatbot/: README.md  pubspec.yaml
flutter_su_chatbot/lib/: su_chatbot.dart
flutter_su_chatbot/lib/src/: su_chat_configuration.dart
flutter_su_chatbot/lib/src/application/: chat_controller.dart
flutter_su_chatbot/lib/src/data/: chat_api.dart
flutter_su_chatbot/lib/src/domain/: chat_models.dart
web-widget/: README.md  package-lock.json  package.json  tsconfig.json
web-widget/public/: auth.js  demo-academic-data.json  demo-scenarios.json  demo.js  index.html  preview.css  runtime-config.js
web-widget/scripts/: preview.mjs
web-widget/src/: api.ts  index.ts  styles.ts  su-chat-widget.ts  types.ts
(+1 files in other folders)
