[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "su-assistant-api"
version = "0.1.0"
description = "Unified API for the Strathmore University student assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "pyjwt[crypto]>=2.10,<3",
  "httpx>=0.28,<1",
  "openai>=1.66,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "pgvector>=0.3,<1",
  "cloud-sql-python-connector[asyncpg]>=1.18,<2",
  "google-auth>=2.40,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true
